# Automato-Robot-Hardware

./: AX12-A.SLDASM  Azure Kinect DK.SLDPRT  OF-12SH.SLDPRT  README.md  camera-stand.SLDASM  circuit.SLDPRT  dynamixel-vertical-frame.SLDPRT  horizontal-plate.SLDPRT  kinect2dynamixel.SLDPRT
2D-DXF/: al3-center-roll-encoder-plate.DXF  al3-center-roll-encoder-plate.SLDDRW  al3-center-roll-motor-plate-up.SLDDRW  al3-pot-cart.DXF  al3-pot-cart.SLDDRW  al3-re-center-roll-motor-plate-up.DXF  al3-re-center-roll-motor-plate-up.SLDDRW  al5-arm-main.DXF  al5-arm-main.SLDDRW  al5-arm-roller-plate.SLDDRW  al5-bearing-plate.SLDDRW  al5-center-roll-motor-plate.DXF  al5-center-roll-motor-plate.SLDDRW  al5-pot-cart.DXF  al5-pot-cart.SLDDRW  al5-pot-cart2.SLDDRW  al5-pot-upper-plate.DXF  al5-pot-upper-plate.SLDDRW  al5-shoulder.DXF  al5-shoulder.SLDDRW  al6-arm-jointrock-s.DXF  al6-arm-jointrock.DXF  al6-arm-jointrock.SLDDRW  al6-tomato-models-etc.DXF  al6-tomato-models-etc.SLDDRW  al9-pot-shaft-plate.DXF  al9-pot-shaft-plate.SLDDRW  po6-container_bottom_plate.DXF  po6-container_side2_plate.DXF  済-al5-arm-main.DXF  済al3-center-roll-motor-plate-up.DXF  済al5-arm-roller-plate.DXF  済al5-bearing-plate.DXF  済al5-shoulder.DXF
3D-STL/: arm-roller.STL  arm-shaft-low.STL  arm-shaft-up.STL  arm-shaft-up.zcodex  bearing-con.STL  bearing-con.zcode  belt-pulley-large.STL  belt-pulley-mini.STL  board-joint.zcodex  board-joint1.STL  board-joint2.STL  board-joint3.STL  bolt-spacer.STL  center-roll-belt-pulley-mini.STL  center-roll-encoder-holder.STL  center-roll-encoder-holder.zcodex  center-roll-plate-sub.STL  center-roll-plate-sub.zcode  center-roll-roller.STL  center-roll-subbearring-con.STL  elbow-plate-sub.STL  elbow-plate-sub.zcode  encoder-cover.STL  fan-plate.STL  hand-bearing-cover.STL  hand-bearing-cover.zcodex  micro-switch-holder-l.STL  micro-switch-holder-r.STL  micro-switch-holder-r.zcodex  pot-cart.STL
ROS/harvest-studio/: CMakeLists.txt  package.xml  rviz.rviz
ROS/harvest-studio/config/: joint_camera.yaml
ROS/harvest-studio/launch/: azure2camera_stand.launch  azure_camera_dynamixel_controllers.launch  display.launch
ROS/harvest-studio/meshes/: camera-link.STL  camera_link.STL  harest-base.STL  stand_base.STL
ROS/harvest-studio/src/: camera2dynamixel.cpp
ROS/harvest-studio/urdf/: harvest-studio.csv  harvest-studio.urdf
board/: board-joint1.SLDPRT  board-joint2.SLDPRT  board-joint3.SLDPRT  board.SLDASM  fan-plate.SLDPRT  main-board.SLDPRT  六角支柱_NLSBH6-25.0-F5.0-M3-N3.SLDPRT
camera-stand/: AX12-A.SLDASM  Azure Kinect DK.SLDPRT  OF-12SH.SLDPRT  al-spacer20.SLDPRT  al-spacer32.SLDPRT  camera-stand.SLDASM  circuit.SLDPRT  dynamixel-vertical-frame.SLDPRT  horizontal-plate.SLDPRT  kinect2dynamixel.SLDPRT  view-angle.SLDPRT  ~$AX12-A.SLDASM  ~$camera-stand.SLDASM  ~$dynamixel-vertical-frame.SLDPRT
center-roll/: 20x20-200.SLDPRT  20x20-250.SLDPRT  Part2.SLDPRT  center-plate-side.SLDPRT  center-plate.SLDPRT  center-roll-attachment.SLDPRT  (+18 more)
(+216 files in other folders)
